fix webUI testconnection modal css introduced in wrapper enhance, fix swapped icons on expand/collapse query view

--- a/src/css/simple-sidebar.css
+++ b/src/css/simple-sidebar.css
@@ -77,7 +77,7 @@
   background: rgba(255, 255, 255, 0.2);
   color: #fff;
 }
-.active {
+.active-menu {
   text-decoration: none;
   background: rgba(255, 255, 255, 0.2);
   color: #fff;
